Notification token update
