# routes/carrier/notification.js
@@ -1,0 +1,8 @@
+const { Router } = require("express");
+const { update } = require("../../controller/carrier/notification/tokenUpdate");
+
+const router = Router();
+
+router.put("/token", update);
+
+module.exports = router;
