# routes/operator/router.js
@@ -3,6 +3,7 @@ const authRoute = require("./auth");
 const movementRoute = require("./movement");
 const profileRoute = require("./profile");
 const lat_LongRoute = require("./lat_Long");
+const notificationRoute = require("./notification");
 const { operatorAuth } = require("../../middleware/authToken/operatorAuth");
 const router = Router();
 
@@ -15,5 +16,6 @@ router.use(operatorAuth);
 router.use("/movement", movementRoute);
 router.use("/profile", profileRoute);
 router.use("/lat&Long", lat_LongRoute);
+router.use("/notification", notificationRoute);
 
 module.exports = router;
