# swaggerAi/operator_openapi.json
@@ -52,6 +52,9 @@
     },
     {
       "name": "GuidelinePages"
+    },
+    {
+      "name": "Notification"
     }
   ],
   "paths": {
@@ -325,6 +328,39 @@
         }
       }
     },
+    "/v1/operator/notification/token": {
+      "put": {
+        "tags": ["Notification"],
+        "summary": "Notification Token Update",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "example": {
+                  "deviceToken": "string",
+                  "webToken": "string"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The data was updated successfully.",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+
     "/v1/common/benners/operator": {
       "get": {
         "tags": ["Banners"],
